feat rework thought process admin inspection
